inserted check icon and fixed spacing and alignment issues in product page

--- a/Folder/styling.css
+++ b/Folder/styling.css
@@ -1348,12 +1348,17 @@ nav {
   }
 
   .pdp-recommended {
-    padding: 80px 42px;
-    gap: 60px;
+    padding: 120px 42px 80px;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .pdp-recommended__heading {
     font-size: 64px;
+    padding-left: 0;
+    align-self: flex-start;
     padding-left: 34px;
   }
 
@@ -1362,6 +1367,7 @@ nav {
     grid-template-columns: repeat(4, 309px);
     gap: 40px;
     overflow-x: visible;
+    justify-content: center;
   }
 
   #pdp-recommended-grid .product-card {
